fixed cta alignment in mobile

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -21,5 +21,14 @@
     gap: 1.2rem;
     margin-top: 2.5rem;
   }
+
+
+  @media screen and (max-width: 600px){
+    .cta{
+        justify-content: center;
+    }
+    
+
+  }
   
   
